# advent-of-code-2021

./: CMakeLists.txt
day-1/: CMakeLists.txt  day-1-sonar-sweep.cpp
day-2/: CMakeLists.txt  day-2-dive.cpp
day-3/: CMakeLists.txt  day-3-binary-diagnostic.cpp  power_consumption_calculator.cpp  power_consumption_calculator.hpp  test.cpp
day-4/: CMakeLists.txt  bingo_player.cpp  bingo_player.hpp  day-4-giant-squid.cpp  test.cpp
day-5/: CMakeLists.txt  day-5-hydrothermal-venture.cpp  test.cpp  vent_evader.cpp  vent_evader.hpp
day-6/: CMakeLists.txt  day-6-lanternfish.cpp  fish_tracker.cpp  fish_tracker.hpp  test.cpp
utils/: CMakeLists.txt  filehandler.cpp  filehandler.hpp  input_parser.cpp  input_parser.hpp  test.cpp
